--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ background-attachment: fixed;
                 <strong>Ру комьюнити</strong><br>
                 Дискорд: <a href="https://discord.gg/s57dss593j" target="_blank">https://discord.gg/s57dss593j</a><br>
                 Вк: <a href="https://vk.me/join/qGzIaWumPHwDF09ZRq_16ANWY0i2djuLPEc=" target="_blank">https://vk.me/join/qGzIaWumPHwDF09ZRq_16ANWY0i2djuLPEc=</a><br>
-                Группа Вк: <a href="vk.com/dark.and.darker" target="_blank">vk.com/dark.and.darker</a><br>
+                Группа Вк: <a href="https://vk.com/dark.and.darker" target="_blank">https://vk.com/dark.and.darker</a><br>
                 Телега: <a href="https://t.me/darkanddarker_chat" target="_blank">https://t.me/darkanddarker_chat</a><br><br>
 
                 <strong>Любые адекватные вопросы (румодеры дс):</strong> @real11ze , @igorechek<br><br>
