--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ background-attachment: fixed;
                 <strong>Кого посмотреть</strong><br>
                 Воин: <a href=\"https://www.twitch.tv/nouvelle\" target=\"_blank\">https://www.twitch.tv/nouvelle</a> (Тут должен был быть Юно, но тут Новелл)<br>
                 Лучник: <a href=\"https://www.twitch.tv/benjihawkey\" target=\"_blank\">https://www.twitch.tv/benjihawkey</a> (редко поточит, но отличный лучник)<br>
-                Чернокнижник: placeholder<br>
+                Чернокнижник: <a href=\https://www.twitch.tv/pressfrigus\" target=\"_blank\">https://www.twitch.tv/pressfrigus</a><br>
                 Бард: <a href=\"https://www.twitch.tv/meideishab\" target=\"_blank\">https://www.twitch.tv/meideishab</a><br>
                 Друид: <a href=\"https://www.twitch.tv/eatsmettv\" target=\"_blank\">https://www.twitch.tv/eatsmettv</a> (Миша)<br>
                 Варвар: <a href=\"https://www.twitch.tv/rebelll52\" target=\"_blank\">https://www.twitch.tv/rebelll52</a> (А кто если не Ребелл?)<br>
