--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -147,6 +146,7 @@ background-attachment: fixed;
                 QUESTS: <a href="https://darkanddarkertracker.com/questtracker" target="_blank">https://darkanddarkertracker.com/questtracker</a><br>
                 PRICE CHECK: <a href="https://darkerdb.com/" target="_blank">https://darkerdb.com/</a><br>
                 Ultimate DaD Tool (WiP): <a href="https://www.reddit.com/r/DarkAndDarker/comments/1jo142b/dad_tools_a_project_im_working_on/" target="_blank">https://www.reddit.com/r/DarkAndDarker/comments/1jo142b/dad_tools_a_project_im_working_on/</a>
+                Inventary Sort: <a href="https://github.com/Beelzebub2/DnDTools" target="_blank">https://github.com/Beelzebub2/DnDTools</a><br>
             </div>
         `,
         errors: `
