--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ background-attachment: fixed;
                 MAP: <a href="https://darkanddarker.map.spellsandguns.com" target="_blank">https://darkanddarker.map.spellsandguns.com</a><br>
                 QUESTS: <a href="https://darkanddarkertracker.com/questtracker" target="_blank">https://darkanddarkertracker.com/questtracker</a><br>
                 PRICE CHECK: <a href="https://darkerdb.com/" target="_blank">https://darkerdb.com/</a><br>
-                Ultimate DaD Tool (WiP): <a href="https://www.reddit.com/r/DarkAndDarker/comments/1jo142b/dad_tools_a_project_im_working_on/" target="_blank">https://www.reddit.com/r/DarkAndDarker/comments/1jo142b/dad_tools_a_project_im_working_on/</a
+                Ultimate DaD Tool (WiP): <a href="https://www.reddit.com/r/DarkAndDarker/comments/1jo142b/dad_tools_a_project_im_working_on/" target="_blank">https://www.reddit.com/r/DarkAndDarker/comments/1jo142b/dad_tools_a_project_im_working_on/</a><br>
                 Inventory Sort: <a href="https://github.com/Beelzebub2/DnDTools" target="_blank">https://github.com/Beelzebub2/DnDTools</a><br>
             </div>
         `,
