--- a/ideas.html
+++ b/ideas.html
@@ -61,7 +61,7 @@
 <header>Ultimate SDF Vision — Do DaD Better!</header>
 
 <nav>
-    <a href="ultimate sdf vision.html">← Назад</a>
+    <a href="index.html">← Назад</a>
 </nav>
 
 </body>
