--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
     <button onclick="showTab('datamine')">Datamine</button>
     <button onclick="showTab('quests')">Quests</button>
     <button onclick="showTab('links_rus')">Links RUS</button>
+    <button onclick="location.href='ideas.html'">Do DaD better!</button>
 </nav>
 
 <div class="content" id="tabContent">
