--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 PRICE CHECK: <a href="https://darkerdb.com/ " target="_blank">https://darkerdb.com/ </a><br>
                 Ultimate DaD Tool (WiP): <a href="https://www.reddit.com/r/DarkAndDarker/comments/1jo142b/dad_tools_a_project_im_working_on/ " target="_blank">https://www.reddit.com/r/DarkAndDarker/comments/1jo142b/dad_tools_a_project_im_working_on/ </a><br>
                 Inventory Sort: <a href="https://github.com/Beelzebub2/DnDTools " target="_blank">https://github.com/Beelzebub2/DnDTools </a><br>
-                Guid base: <a href="https://nezbuild.com" target="_blank">https://nezbuild.com </a><br>
+                Guide base: <a href="https://nezbuild.com" target="_blank">https://nezbuild.com </a><br>
             </div>
         `,
         errors: `
