--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
                 Ultimate DaD Tool (WiP): <a href="https://www.reddit.com/r/DarkAndDarker/comments/1jo142b/dad_tools_a_project_im_working_on/ " target="_blank">https://www.reddit.com/r/DarkAndDarker/comments/1jo142b/dad_tools_a_project_im_working_on/ </a><br>
                 Inventory Sort: <a href="https://github.com/Beelzebub2/DnDTools " target="_blank">https://github.com/Beelzebub2/DnDTools </a><br>
                 Guide base: <a href="https://nezbuild.com" target="_blank">https://nezbuild.com </a><br>
+                Timer: <a href="https://dnd-map-timer.wckd.dev" target="_blank">https://dnd-map-timer.wckd.dev </a><br>
             </div>
         `,
         errors: `
@@ -254,3 +255,4 @@
 
 </body>
 </html>
+
