--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 Всю информацию о состоянии серверов можно найти на официальном дискорд сервере: <a href="https://discord.gg/darkanddarker " target="_blank">https://discord.gg/darkanddarker </a><br><br>
 
                 <strong>Когда вайп?</strong><br>
-                Каждые три-четыре месяца. Крайний вайп был 10го апреля.<br><br>
+                Обычно каждые три-четыре месяца. Следующий вайп ожидается 26го сентября.<br><br>
 
                 <strong>Кого посмотреть</strong><br>
                 Воин: <a href=\"https://www.twitch.tv/nouvelle \" target=\"_blank\">https://www.twitch.tv/nouvelle </a> (Тут должен был быть Юно, но тут Новелл)<br>
@@ -255,4 +255,5 @@
 
 </body>
 </html>
+
 
