--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                 Обычно вайпы происходят каждые 3-4 месяца. Следующий вайп ожидается 26 сентября.</p>
                 
                 <strong>🎮 Стримеры по классам</strong>
-                <p><strong>Воин:</strong> <a href="https://www.twitch.tv/nouvelle" target="_blank">Nouvelle</a> (Здесь должен был быть Юно, но здесь Новелл)</p>
+                <p><strong>Воин:</strong> <a href="https://www.twitch.tv/nouvelle" target="_blank">Nouvelle</a></p>
                 <p><strong>Лучник:</strong> <a href="https://www.twitch.tv/benjihawkey" target="_blank">Benjihawkey</a> (редко поточит, но отличный лучник)</p>
                 <p><strong>Чернокнижник:</strong> <a href="https://www.twitch.tv/pressfrigus" target="_blank">PressFrigus</a></p>
                 <p><strong>Бард:</strong> <a href="https://www.twitch.tv/meideishab" target="_blank">Meideishab</a></p>
@@ -683,4 +683,5 @@
 </body>
 </html>
 ```
+
 
