--- a/index.html
+++ b/index.html
@@ -218,6 +218,18 @@
             padding: 2px 6px;
             border-radius: 4px;
             font-family: monospace;
+            display: inline-block;
+        }
+
+        .error-description pre {
+            background: #222;
+            padding: 12px;
+            border-radius: 6px;
+            overflow-x: auto;
+            margin: 12px 0;
+            white-space: pre-wrap;
+            font-family: monospace;
+            font-size: 14px;
         }
         
         .link-button {
@@ -470,7 +482,7 @@
                 <p>Решения для распространенных ошибок, с которыми сталкиваются игроки, включая коды ошибок и пошаговые инструкции.</p>
             </div>
             <div class="tab-card">
-                <h3>🗺️ Quests</hh3>
+                <h3>🗺️ Quests</h3>
                 <p>Подробные гайды по квестам, маршруты и визуальные подсказки для успешного прохождения.</p>
             </div>
             <div class="tab-card">
@@ -490,7 +502,29 @@
         "Error code 16": "Проблема чаще всего связана с драйверами - оказалось, что пользователь пытался использовать ПО NVIDIA на устройстве AMD/Radeon. После установки правильного ПО и обновления драйверов проблема была решена.",
         "Error: 21": "Необходимо зайти в Службы (Services) и найти службу \"TavernWorker_3_1\", затем вручную щелкнуть правой кнопкой мыши и выбрать 'Запустить'. Установка автоматического запуска НЕ работает. Если это не помогает, переустановите игру и повторите процесс.",
         "Error 26": "Используйте STEAMDECK=1 %command% в параметрах запуска. Это сработает.",
-        "Ошибка подключения RUS ONLY": "Не можете подключиться к серверу? Выдает ошибку 26-15 или вовсе не подключает без ошибок? Или пропали персонажи? Это региональные ограничения, связанные с запретом Cloudflare. Для того, чтобы подключиться к игре, нужно обойти эти ограничения: используйте VPN или zapret_cloudflare."
+        "Ошибка подключения RUS ONLY": "Не можете подключиться к серверу? Выдает ошибку 26-15 или вовсе не подключает без ошибок? Или пропали персонажи? Это региональные ограничения, связанные с запретом Cloudflare. Для того, чтобы подключиться к игре, нужно обойти эти ограничения: используйте VPN или zapret_cloudflare.",
+        "Error 28-16": `
+            <p><strong>Ошибка 28-16 (пользоваться на свой страх и риск)</strong></p>
+            <ol>
+                <li>Открой Блокнот.</li>
+                <li>Вставь туда вот это:<br>
+                    <pre>Windows Registry Editor Version 5.00
+[HKEY_LOCAL_MACHINE\\SYSTEM\\CurrentControlSet\\Control\\DeviceGuard\\Scenarios\\HypervisorEnforcedCodeIntegrity]
+"Enabled"=dword:00000001</pre>
+                </li>
+                <li>Сохрани файл как <strong>hvci.reg</strong> (обязательно с расширением <code>.reg</code>, не <code>.txt</code>).</li>
+                <li>Дважды кликни по файлу → согласись на изменение реестра.</li>
+                <li>Перезагрузи компьютер.</li>
+            </ol>
+            <p>Игра больше не будет ругаться на HVCI (code: 26-18). 🚀</p>
+            <p><em>Если не хочешь лезть в настройки, то:</em></p>
+            <ul>
+                <li>Нажать на старт</li>
+                <li>Дожидаемся красной кнопки отмены/стоп запуска</li>
+                <li>Отключаем инет</li>
+                <li>Включаем инет через минуту-две</li>
+            </ul>
+        `
     };
 
     function createErrorItem(code, description) {
@@ -524,7 +558,8 @@
                     "Error code 16": "Ошибка подключения",
                     "Error: 21": "Превышено время ожидания",
                     "Error 26": "Неверный формат данных",
-                    "Ошибка подключения RUS ONLY": "Файл не найден (региональные ограничения)"
+                    "Ошибка подключения RUS ONLY": "Файл не найден (региональные ограничения)",
+                    "Error 28-16": "HVCI / Критическая системная ошибка"
                 }).map(([code, title]) => createErrorItem(code, errorDescriptions[code])).join('')}
             </ul>
             <div class="error-description" id="general-tips">
